# network-file-server

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy_relay.sh  main.py  network_file_server.py  pyproject.toml  run.sh  run_mount_server.sh  run_relay.sh  start_server.sh  wifi_file_server.py
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.3-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: auth-blocks-spa.md  clipboard-and-binding.md  upload-frame-too-large.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
accounts/: __init__.py  enums.py  exceptions.py  models.py  passwords.py  resolve.py  sqlite_store.py  store.py
agent/: __init__.py  auth.py  backoff.py  cli.py  connection.py  display.py  duration.py  exceptions.py  proxy.py  ws_adapter.py
client/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  test_fix.txt  vitest.config.ts
client/e2e/: auth.spec.ts  core-flows.spec.ts
client/public/: manifest.webmanifest  sw.js
client/src/: App.tsx  appMode.test.ts  appMode.ts  index.css  main.tsx  queryClient.ts
docs/: architecture-remediation-plan.md  deployment.md  fable-5-codebase-review.md  fable-5-remediation-plan.md  modularity-audit.md  project-log.md  tailscale-overlay-plan.md
docs/agents/: codebase-review-2026-07-08.md
feature-ideas/: 01-qr-code-connect.md  05-e2e-encryption.md  06-webrtc-p2p.md  09-auto-sync.md  10-admin-dashboard.md  11-pwa-mobile.md  12-desktop-tray-app.md  13-plugin-system.md  14-file-comments-annotations.md  15-file-versioning.md  16-smart-gallery.md  17-transfer-resume.md  18-dark-mode-themes.md  19-search-and-filter.md  20-transfer-notifications.md  22-speed-test.md  23-file-compression.md  25-terminal-ui.md  26-multi-server-mesh.md  27-ai-powered-search.md  28-scheduled-transfers.md  29-mobile-camera-upload.md  30-bandwidth-throttling.md  31-file-request.md  32-offline-mode.md  33-audit-log.md  34-virtual-folders.md  35-integrity-verification.md  38-custom-server-name.md  39-keyboard-shortcuts.md  40-file-deduplication.md  41-bulk-rename.md  42-zip-extraction.md  43-copy-move-files.md  44-transfer-history.md  45-multi-root-folders.md  46-upload-size-limits.md  47-folder-bookmarks.md  48-user-accounts.md  49-cloud-run-deployment.md  (+6 more)
feature-ideas/completed/: 02-clipboard-sharing.md  03-media-preview.md  04-drag-drop-batch-ops.md  07-secure-tunnel.md  08-receive-mode-dropbox.md  (+4 more)
relay/: __init__.py  cli.py  config.yaml
scripts/: build.sh  clean.sh  e2e.sh  gen_api_types.sh  install_setup.sh  run.sh  test.sh
server/: __init__.py
shared/: __init__.py  backoff.py  duration.py  identity_sig.py  paths.py  qr.py  spa.py  sqlite_kernel.py
templates/: index.html  share_download.html  share_expired.html  share_unavailable.html
test-files/: readme.txt
tests/: test_import_boundaries.py
tunnel/: __init__.py  connection.py  constants.py  enums.py  exceptions.py  frames.py  metadata.py  protocol.py  ws_payload.py
(+413 files in other folders)
