[project]
name = "wifi-ftp-server"
version = "0.1.0"
description = "WiFi File Server - Share files over local network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "qrcode>=8.0",
    "ifaddr>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["server/tests"]
asyncio_mode = "auto"
