[project]
name = "network-file-server"
version = "0.1.0"
description = "Network File Server - Share files over local network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1.0",
    "qrcode>=8.0",
    "ifaddr>=0.2.0",
    "zipstream-ng>=1.9.0",
    "bcrypt>=5.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
    "httpx>=0.28.0",
    "websockets>=13.0",
    "httpx-ws>=0.8.2",
    "slowapi>=0.1.9",
    "aiosqlite>=0.22.1",
]

[project.scripts]
network-file-server = "server.app.cli:main"
network-relay = "relay.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "tunnel", "relay", "agent", "accounts", "shared"]

[tool.pytest.ini_options]
testpaths = ["server/tests", "tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Defaults (E4/E7/E9, F) — pragmatic baseline; tighten incrementally.
select = ["E4", "E7", "E9", "F"]

# Type checking is adopted leaf-first: the framework-free packages are checked
# strictly today; server/relay/agent join as their dynamic seams are cleaned up.
[tool.mypy]
packages = ["tunnel", "accounts", "shared"]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
# qrcode ships no type stubs; treat its API as Any at the import boundary.
module = ["qrcode", "qrcode.*"]
ignore_missing_imports = true
